# monograph

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  configure.ac
src/: main.c  options.c  options.h
